# agents-harness

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
app/: main.py
configs/: agent-harness.yaml
docs/: index.md  manifest.yaml
docs/adr/: README.md
docs/archive/: README.md
docs/current/architecture/: README.md  harness-model.md
docs/current/contracts/: README.md
docs/current/domain/: README.md
docs/current/product/: README.md
docs/current/runbooks/: README.md
docs/worklog/: README.md
scripts/: check  dev  lint  setup  test
standards/base/: README.md
standards/skills/: manifest.yaml
